actions: rebuild gluon on site changes

--- a/.github/workflows/build-gluon.yml
+++ b/.github/workflows/build-gluon.yml
@@ -12,6 +12,8 @@ on:
     paths:
       - "modules"
       - "Makefile"
+      - "contrib/ci/minimal-site/**"
+      - "docs/site-example/**"
       - "scripts/**"
       - "package/**"
       - "patches/**"
@@ -22,6 +24,8 @@ on:
     paths:
       - "modules"
       - "Makefile"
+      - "contrib/ci/minimal-site/**"
+      - "docs/site-example/**"
       - "scripts/**"
       - "package/**"
       - "patches/**"
