--- a/.github/filters.yml
+++ b/.github/filters.yml
@@ -71,14 +71,6 @@
     "targets/generic",
     "targets/targets.mk"
   ],
-  "mpc85xx-p1010": [
-    "targets/mpc85xx-p1010",
-    "modules",
-    "Makefile",
-    "patches/**",
-    "targets/generic",
-    "targets/targets.mk"
-  ],
   "mpc85xx-p1020": [
     "targets/mpc85xx-p1020",
     "modules",
@@ -163,6 +155,14 @@
   ],
   "bcm27xx-bcm2710": [
     "targets/bcm27xx-bcm2710",
+    "modules",
+    "Makefile",
+    "patches/**",
+    "targets/generic",
+    "targets/targets.mk"
+  ],
+  "bcm27xx-bcm2711": [
+    "targets/bcm27xx-bcm2711",
     "modules",
     "Makefile",
     "patches/**",
